[gd_scene load_steps=6 format=3 uid="uid://5mek08yc56pj"]

[ext_resource type="Script" path="res://enemies/purple/purple3.gd" id="1_roert"]

[sub_resource type="Gradient" id="Gradient_klyji"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.784314)

[sub_resource type="CircleShape2D" id="CircleShape2D_wt1ba"]
radius = 37.0259

[sub_resource type="CircleShape2D" id="CircleShape2D_yu0gh"]
radius = 37.3363

[sub_resource type="CircleShape2D" id="CircleShape2D_8mjf7"]
radius = 36.0

[node name="purple3" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_roert")

[node name="body" type="CPUParticles2D" parent="."]
amount = 25
speed_scale = 2.0
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -360.0
angle_max = 360.0
scale_amount_min = 10.0
scale_amount_max = 10.0
color = Color(0.372549, 0, 1, 1)
color_ramp = SubResource("Gradient_klyji")

[node name="playerdeath" type="Area2D" parent="." groups=["enemy", "enemy_body", "no heal_cooldown reduction"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdeath"]
visible = false
shape = SubResource("CircleShape2D_wt1ba")
disabled = true

[node name="hurts_player" type="Area2D" parent="." groups=["enemy_attack", "no heal_cooldown reduction"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurts_player"]
visible = false
shape = SubResource("CircleShape2D_yu0gh")
disabled = true

[node name="eye_bottom" type="CPUParticles2D" parent="."]
position = Vector2(0, 25)
amount = 20
speed_scale = 1.5
explosiveness = 0.9
local_coords = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 150.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 5.0
scale_amount_max = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_8mjf7")

[node name="Stunned" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="playerdeath" to="." method="_on_playerdeath_area_entered"]
[connection signal="area_entered" from="hurts_player" to="." method="_on_hurts_player_area_entered"]
[connection signal="area_exited" from="hurts_player" to="." method="_on_hurts_player_area_exited"]
[connection signal="timeout" from="Stunned" to="." method="_on_stunned_timeout"]
